reduced entity icon size to prevent clipping

--- a/src/style.sass
+++ b/src/style.sass
@@ -79,7 +79,7 @@ svg
 
     .content
         filter: drop-shadow( 0rem -0.03rem 0rem #384043) saturate(80%) sepia(30%)
-        font-size: 0.6rem
+        font-size: 0.5rem
         text-anchor: middle
         cursor: pointer
         user-select: none
